Fixes from W3 schools html validation

--- a/public/contact.html
+++ b/public/contact.html
@@ -111,17 +111,17 @@
             <form>
                 <div class="row d-flex align-items-center mb-3">
                     <div class="col-lg-1 my-2"><label for="name">NAME:</label></div>
-                    <div class="col-lg-4"><input class="p-2" type="text" name="name" placeholder="YOUR NAME..."></div>
+                    <div class="col-lg-4"><input id="name" class="p-2" type="text" name="name" placeholder="YOUR NAME..."></div>
                 </div>
                 <div class="row d-flex align-items-center mb-3">
                     <div class="col-lg-1 my-2"><label for="email">EMAIL:</label></div>
-                    <div class="col-lg-4"><input class="p-2" type="email" name="email" placeholder="YOUR E-MAIL..."></div>
+                    <div class="col-lg-4"><input id="email" class="p-2" type="email" name="email" placeholder="YOUR E-MAIL..."></div>
                 </div>
                 <div class="row my-2">
                     <div class="col-lg-1"><label for="message">MESSAGE:</label></div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-lg-5"><textarea class="p-2" name="message" rows="6" placeholder="YOUR TEXT..."></textarea></div>
+                    <div class="col-lg-5"><textarea id="message" class="p-2" name="message" rows="6" placeholder="YOUR TEXT..."></textarea></div>
                 </div>
                 <div class="row">
                     <div class="col-lg-2"><button class="py-2 px-3" type="submit" name="submit">SEND MESSAGE</button></div>
@@ -157,8 +157,8 @@
                             <h3 class="mb-3">OUR STORES</h3>
                             <div class="stores d-flex flex-column justify-content-between">
                                 <p>Feel free to visit our stores or contact us.</p>
-                                <p>Vinegade 109</br>5000 Odense</br>99886622</p>
-                                <p>Vestergade 910</br>9000 Aalborg</br>96819191</p>
+                                <p>Vinegade 109<br>5000 Odense<br>99886622</p>
+                                <p>Vestergade 910<br>9000 Aalborg<br>96819191</p>
                                 <div>
                                     <a href="https://www.facebook.com/"><i class="fa fa-facebook mr-3" aria-hidden="true"></i></a>
                                     <a href="https://www.twitter.com"><i class="fa fa-twitter mr-3" aria-hidden="true"></i></a>
