--- a/public/detail.html
+++ b/public/detail.html
@@ -126,12 +126,12 @@
                                 <label for="size">Size</label><label for="amount">Amount</label>
                             </div>
                             <div class="d-flex justify-content-between mb-4">
-                                <select class="py-2 mr-5" name="size">
+                                <select id="size" class="py-2 mr-5" name="size">
                                     <option value="eu-45-black">EU 45 Black</option>
                                     <option value="eu-45-black">EU 46 Black</option>
                                     <option value="eu-45-black">EU 47 Black</option>
                                 </select>
-                                <input class="py-2 ml-3" type="number" name="amount" value="1">
+                                <input id="amount" class="py-2 ml-3" type="number" name="amount" value="1">
                             </div>
                         </form>
                         <button class="align-self-end py-2 px-5" type="submit" form="buy" name="buy-now">BUY NOW</button>
@@ -230,8 +230,8 @@
                             <h3 class="mb-3">OUR STORES</h3>
                             <div class="stores d-flex flex-column justify-content-between">
                                 <p>Feel free to visit our stores or contact us.</p>
-                                <p>Vinegade 109</br>5000 Odense</br>99886622</p>
-                                <p>Vestergade 910</br>9000 Aalborg</br>96819191</p>
+                                <p>Vinegade 109<br>5000 Odense<br>99886622</p>
+                                <p>Vestergade 910<br>9000 Aalborg<br>96819191</p>
                                 <div>
                                     <a href="https://www.facebook.com/"><i class="fa fa-facebook mr-3" aria-hidden="true"></i></a>
                                     <a href="https://www.twitter.com"><i class="fa fa-twitter mr-3" aria-hidden="true"></i></a>
