--- a/public/index.html
+++ b/public/index.html
@@ -115,8 +115,8 @@
                             <div class="carousel-item active">
                                 <img class="d-block img-fluid" src="assets/imgs/slider/1.jpg" alt="First slide">
                                 <div class="carousel-caption">
-                                    <h1>RIGHT IS PINK.</br>LEFT IS BLUE</h1>
-                                    <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch</br>playmakers, these kicks are ready to stand out.</p>
+                                    <h1>RIGHT IS PINK.<br>LEFT IS BLUE</h1>
+                                    <p>Inspired by Brasil’s bold colors and matching up to football’s on-pitch<br>playmakers, these kicks are ready to stand out.</p>
                                     <button class="px-4 py-2" type="button" name="call-to-action">SHOP BRASIL</button>
                                 </div>
                             </div>
@@ -137,17 +137,17 @@
                 <div class="col-lg-4">
                     <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/1.jpg" alt="football shoes"></a>
                     <a href="#">FOOTBALL SHOES</a>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
                 </div>
                 <div class="col-lg-4">
                     <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/2.jpg" alt="modern clothes"></a>
                     <a href="#">MODERN CLOTHES</a>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
                 </div>
                 <div class="col-lg-4">
                     <a href="#"><img class="img-fluid mb-4" src="assets/imgs/highlights/3.jpg" alt="accessories"></a>
                     <a href="#">BAGS & ACCESSORIES</a>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,</br>vivamus congue nulla leo, quis imperdiet magna.</p>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipiscing,<br>vivamus congue nulla leo, quis imperdiet magna.</p>
                 </div>
             </div>
 
@@ -173,7 +173,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -206,7 +206,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -239,7 +239,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -272,7 +272,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -305,7 +305,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -338,7 +338,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -371,7 +371,7 @@
                         <div class="product--description px-3 mt-3 pb-2">
                             <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
-                            <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
+                            <p>God og robust terrænløbesko med GORE-<br>TEX-membran. Overdel i let mesh og<br>sål med affjedring både i hæl og forfod....</p>
                         </div>
                         <div class="price d-flex justify-content-end align-items-center px-3 py-2">
                             <p>$ 86.99</p>
@@ -422,8 +422,8 @@
                             <h3 class="mb-3">OUR STORES</h3>
                             <div class="stores d-flex flex-column justify-content-between">
                                 <p>Feel free to visit our stores or contact us.</p>
-                                <p>Vinegade 109</br>5000 Odense</br>99886622</p>
-                                <p>Vestergade 910</br>9000 Aalborg</br>96819191</p>
+                                <p>Vinegade 109<br>5000 Odense<br>99886622</p>
+                                <p>Vestergade 910<br>9000 Aalborg<br>96819191</p>
                                 <div>
                                     <a href="https://www.facebook.com/"><i class="fa fa-facebook mr-3" aria-hidden="true"></i></a>
                                     <a href="https://www.twitter.com"><i class="fa fa-twitter mr-3" aria-hidden="true"></i></a>
